--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
             <canvas id="signature-pad" class="signature-pad" width="300" height="150"></canvas>
             <div class="signature-controls">
                 <button type="button" id="clearBtn" class="btn-ghost">Borrar firma</button>
-                <small class="hint">Firma con dedo o mouse</small>
+            </div>
+            <script src="https://cdn.jsdelivr.net/npm/signature_pad@4.0.0/dist/signature_pad.umd.min.js"></script>
             </div>
         </div>
 
